src/objects/ADvendio__UserAdServerAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdServerLogin__c</fullName>
        <label>AdServer</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>User AdServer Assignments</relationshipLabel>
        <relationshipName>UserAdServerAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerUserID__c</fullName>
        <description>Enter the user-ID of this user by the ad-server. If not defined, the &quot;AdServer User Name&quot; will be used to try to find the user by the ad-server.</description>
        <inlineHelpText>Enter the user-ID of this user by the ad-server. If not defined, the &quot;AdServer User Name&quot; will be used to try to find the user by the ad-server.</inlineHelpText>
        <label>AdServer User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerUserName__c</fullName>
        <description>Enter the username of this user by the ad-server. It can be omitted if the &quot;AdServer User ID&quot; is defined.</description>
        <inlineHelpText>Enter the username of this user by the ad-server. It can be omitted if the &quot;AdServer User ID&quot; is defined.</inlineHelpText>
        <label>AdServer User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserAdServerAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User AdServer Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__User__c</columns>
        <columns>ADvendio__AdServerLogin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UAA-{0000}</displayFormat>
        <label>User AdServer Assignment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User AdServer Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>